--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,18 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<!--suppress UnresolvedMavenProperty -->
+		<docker.db.url.jdbc>${JDBC_URL}</docker.db.url.jdbc>
+		<!--suppress UnresolvedMavenProperty -->
+		<docker.db.username.jdbc>${JDBC_USERNAME}</docker.db.username.jdbc>
+		<!--suppress UnresolvedMavenProperty -->
+		<docker.db.password.jdbc>${JDBC_PASSWORD}</docker.db.password.jdbc>
+		<!--suppress UnresolvedMavenProperty -->
+		<docker.db.driver.jdbc>${JDBC_DRIVER}</docker.db.driver.jdbc>
 	</properties>
 
 	<dependencies>
@@ -71,7 +83,10 @@
 		<profile>
 			<id>test</id>
 			<properties>
-				<liquibase.config>classpath:db/liquibase_test.properties</liquibase.config>
+				<liquibase.changeLogFile>db/dbchangelog.xml</liquibase.changeLogFile>
+				<liquibase.url>jdbc:h2:./testdb;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE;</liquibase.url>
+				<liquibase.username></liquibase.username>
+				<liquibase.password></liquibase.password>
 			</properties>
 			<activation>
 				<activeByDefault>true</activeByDefault>
@@ -80,7 +95,20 @@
 		<profile>
 			<id>production</id>
 			<properties>
-				<liquibase.config>classpath:db/liquibase.properties</liquibase.config>
+				<liquibase.changeLogFile>db/dbchangelog.xml</liquibase.changeLogFile>
+				<liquibase.url>jdbc:postgresql://127.0.0.1:5432/dishesdb</liquibase.url>
+				<liquibase.username>postgres</liquibase.username>
+				<liquibase.password>password</liquibase.password>
+			</properties>
+		</profile>
+		<profile>
+			<id>docker</id>
+			<properties>
+				<liquibase.changeLogFile>db/dbchangelog.xml</liquibase.changeLogFile>
+				<!--suppress UnresolvedMavenProperty -->
+				<liquibase.url>${docker_db_url_jdbc}</liquibase.url>
+				<liquibase.username>${docker.db.username.jdbc}</liquibase.username>
+				<liquibase.password>${docker.db.password.jdbc}</liquibase.password>
 			</properties>
 		</profile>
 	</profiles>
@@ -88,11 +116,37 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.4.1</version>
+				<executions>
+					<execution>
+						<id>shade-my-jar</id>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<finalName>job4j_dish</finalName>
+							<transformers>
+								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<mainClass>ru.job4j.DishApplication</mainClass>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
 				<groupId>org.liquibase</groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
 				<version>4.15.0</version>
 				<configuration>
-					<propertyFile>${liquibase.config}</propertyFile>
+					<changeLogFile>${liquibase.changeLogFile}</changeLogFile>
+					<url>${liquibase.url}</url>
+					<username>${liquibase.username}</username>
+					<password>${liquibase.password}</password>
 				</configuration>
 				<executions>
 					<execution>
